@@ -26,6 +26,6 @@ The libdwarf documentation:
 	These documents are substantial revisions, done at SGI, of
 	previous libdwarf work.  
 
-$Source: /plroot/cmplrs.src/v7.4.2m/.RCS/PL/libdwarf/RCS/COPYING,v $
+$Source: /plroot/cmplrs.src/v7.4.3m/.RCS/PL/libdwarf/RCS/COPYING,v $
 $Revision: 1.2 $
 $Date: 2001/01/16 17:08:36 $
